Fixed mobile navigation height being too large in some circumstances.

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -185,7 +185,7 @@ nav #mobile-menu {
     opacity: 0;
 
     width: 100%;
-    max-height: calc(100vh - 100%);
+    max-height: calc(100svh - 100%);
     overflow-y: auto;
     z-index: -1;
 }
